added gallery core

--- a/opportunities.html
+++ b/opportunities.html
@@ -340,7 +340,7 @@
 
 
     <!-- our_secrets -->
-    <section class="our_secrets">
+    <section class="our_secrets" style="background-color: transparent;">
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
@@ -403,7 +403,49 @@
         </div>
     </section>
     <!-- end -->
-    
+
+    <!-- Opportunities_section -->
+    <section class="opportunities_section">
+        <div class="container">
+            <div class="text">
+                <h1 class="fontGraphikSemibold">
+                    Opportunities
+                </h1>
+                <p class="banner--des fontLatoRegular">
+                    We have 8 Open positions now
+                </p>
+            </div>
+            <div class="data_row">
+                <div style="padding-left: 60px;position: relative;">
+                    <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
+                    <div class="row list">
+                        <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                            <h4>Front-End Developer</h4>
+                            <p>Chennai</p>
+                        </div>
+                        <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
+                            <button class="fontLatoBlack">APPLY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-left: 60px;position: relative;">
+                    <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
+                    <div class="row list">
+                        <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                            <h4>Back-End Developer</h4>
+                            <p>Chennai</p>
+                        </div>
+                        <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
+                            <button class="fontLatoBlack">APPLY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end -->
+
+
     <!-- next_billion -->
     <section class="next_billion">
         <img alt="oval" src="./images/oval.png" class="ovel" />
