--- a/opportunities.html
+++ b/opportunities.html
@@ -169,7 +169,7 @@
                     Make dreams — Come true
                 </h1>
                 <p class="banner--des fontLatoRegular">
-                    We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders.
+                    We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders to take their dream one step closer by building a winning product in the marketplace.
                 </p>
                 </div>
             </div>
@@ -210,26 +210,6 @@
                                 If you don’t stand for something, you will fall for anything. It’s such a messy world filled with distractions often disguised in the form of opportunities. You will end up nowhere if you don’t have a strong purpose that justifies each of your action. What is your vision statement?. Is your entire team glued to it?. Do you know where you are going?. Clarity is Mastery!
                             </p>
                         </div>
-                        <!-- <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden">
-                            <p class="text_para fontLatoRegular">
-                                Every aspect of your product is roughly outlined to get a clearer view of the interactions in your product.
-                            </p>
-                        </div>
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 sale sale3" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                            <p class="text_para fontLatoRegular">
-                                Finalized sketches are properly grown into a complete experience that contains the desired visual elements with a defined aesthetic.
-                            </p>
-                        </div>
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 sale sale4" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden">
-                            <p class="text_para fontLatoRegular">
-                                Inner beauty is crucial. A well-architectured product runs as smooth as a newly-oiled engine, with the gears fit right.
-                            </p>
-                        </div>
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 sale sale5" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden">
-                            <p class="text_para fontLatoRegular">
-                                Stakeholders get together to discuss the exact criteria of your product’s performance, security, and scalability and finalize them.
-                            </p>
-                        </div> -->
 
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
@@ -338,7 +318,7 @@
                     Second Home. Epic Work. Fun Unlimited.
                 </h1>
                 <p class="description">
-                    We understand that it's an incredibly large mission that our team of<br/> young minds is committed to succeed in.
+                    We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.
                 </p>    
             </div>
         </div>
@@ -455,9 +435,9 @@
                             <span class="fa_icon Oval_code">
                                 <img alt="code" src="./images/code.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Clean code</p>
+                            <p class="card-title fontGraphikSemibold">Express</p>
                             <p class="card-text fontLatoRegular">
-                                 Flexible and extensible code that you can understand, modify and maintain with ease.
+                                We create the kind of culture and ambience that's necessary for everyone to express their talent and passion.
                             </p>
                         </div>
                     </div>
@@ -468,9 +448,9 @@
                             <span class="fa_icon Oval_pro">
                                 <img alt="programming" src="./images/programming.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Test-driven development</p>
+                            <p class="card-title fontGraphikSemibold">Impress</p>
                             <p class="card-text fontLatoRegular">
-                                Break the negative feedback loop with products that are tested right, every step of the way. 
+                                We love people who leave an unerasable impression on the team through the impact of their work.
                             </p>
                         </div>
                     </div>
@@ -481,9 +461,9 @@
                             <span class="fa_icon Oval_flash">
                                 <img alt="shape" src="./images/shape.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Agility</p>
+                            <p class="card-title fontGraphikSemibold">Progress</p>
                             <p class="card-text fontLatoRegular">
-                                We learn and adapt. Our agile process embraces change till we reach perfection.
+                                We believe that improvement, achievement, and success have no meaning without  growth and progress.
                             </p>
                         </div>
                     </div>
@@ -641,11 +621,12 @@
                 <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
+                <button class="banner_button fontLatoBlack mail_us" onclick="window.location.href = './contact'">
+                    <span> MAIL US &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </button>
                 <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
-                    <span> 
-                            TALK TO US &nbsp
-                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    </span></button>
+                    <span> JOIN NOW &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                </button>
             </div>
         </div>
         <img data-aos="zoom-in-up" data-aos-duration="5000" alt="path-3-copy" src="./images/path-3-copy.png" class="path-3" />
