--- a/opportunities.html
+++ b/opportunities.html
@@ -179,11 +179,11 @@
 
     <!-- crayond 5c's -->
     <section class="why_us" id="design_section">
-        <div class="container-fluid container_bg_section2 project_planing" style="background-color: #fff;display: flex;min-height: 100vh;padding: 40px 16px;">
+        <div class="container-fluid container_bg_section2 project_planing five_c">
             <div class="container" style="margin: auto;">
                 <div class="row" style="padding: 0;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;">
-                        <div class="img_section" style="margin: auto;border-radius: 6px;padding-right: 40px;">
+                        <div class="img_section">
                             <img alt="Modern-Engineering" class="sale sale1 active_cont" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/clarity.png" />
                             <img alt="Modern-Engineering" class="sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/culture.png" />
                             <img alt="Modern-Engineering" class="sale sale3" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/competence.png" />
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale1 active_cont" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <!-- <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" /> -->
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
@@ -213,7 +213,7 @@
 
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
                             </div>
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale3" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
                             </div>
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale4" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
                             </div>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale5" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
-                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
                             </div>
@@ -322,7 +322,7 @@
                 </p>    
             </div>
         </div>
-        <div class="row">
+        <div class="row_s">
             <div class="container">
                 <div class="Rectangle_card_body culture">
                     <div class="cont">
