--- a/opportunities.html
+++ b/opportunities.html
@@ -149,7 +149,7 @@
             <!-- <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"> -->
             <!-- <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"> -->
         <!-- </video> -->
-        <img class="team_img" src="./images/team.JPG"/>
+        <img class="team_img" style="display: none;" src="./images/team.JPG"/>
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
@@ -291,7 +291,7 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex;padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                         <!-- <div class="img_section" style="margin: auto;"> -->
-                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_sale tap2" data-sale="1">1.&nbsp;Wireframe</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_sale tap2" data-sale="1">1.&nbsp;Clarity</span></tapSection><span class="horizontal_line"></span>
                             <tapSection><span class="tap2" data-sale="2">2.&nbsp;Culture</span></tapSection><span class="horizontal_line"></span>
                             <tapSection><span class="tap2" data-sale="3">3.&nbsp;Competence</span></tapSection><span class="horizontal_line"></span>
                             <tapSection><span class="tap2" data-sale="4">4.&nbsp;Commitment</span></tapSection><span class="horizontal_line"></span>
@@ -448,9 +448,9 @@
                             <span class="fa_icon Oval_pro">
                                 <img alt="programming" src="./images/programming.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Impress</p>
+                            <p class="card-title fontGraphikSemibold" >Impress</p>
                             <p class="card-text fontLatoRegular">
-                                We love people who leave an unerasable impression on the team through the impact of their work.
+                                We love people who leave an unerasable impression on the team through the impact of<br/> their work.
                             </p>
                         </div>
                     </div>
