--- a/opportunities.html
+++ b/opportunities.html
@@ -153,7 +153,7 @@
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
-                <!-- <h1 class="display-3">Video Header</h1> -->
+                <h1 class="display-3 fontGraphikMedium mobile_title" style="font-size: 46px;font-weight: 700; display:none" >Make dreams Come true</h1>
                 <!-- <p class="lead mb-0"><i class="fa fa-play-circle" style="cursor: pointer; font-size: 100px;color: #E5B009;border-radius: 50px;background-color: #fff;line-height: 0.7;" aria-hidden="true"></i></p> -->
             </div>
             </div>
