mobile responsive image view image fxf

--- a/opportunities.html
+++ b/opportunities.html
@@ -324,7 +324,7 @@
         </div>
         <div class="row_s">
             <div class="container">
-                <div class="Rectangle_card_body culture">
+                <div class="Rectangle_card_body culture" data-aos="fade-right" data-aos-duration="3000">
                     <div class="cont">
                         <p class="card_icon" style="background-color: #eff8f6;">
                         <!-- <img alt="code" src="./images/code.svg" /> -->
@@ -335,7 +335,7 @@
                         <p class="card-text fontLatoRegular">Great <br>Culture</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body learning">
+                <div class="Rectangle_card_body learning" data-aos="zoom-in" data-aos-duration="3000">
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f3f5ff;">
                         <img alt="code" class="in_active" src="./images/experimental_learning.png" />
@@ -344,7 +344,7 @@
                         <p class="card-text fontLatoRegular">Experimental <br/>Learning</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body leadership">
+                <div class="Rectangle_card_body leadership" data-aos="fade-down" data-aos-duration="3000">
                     <div class="cont">
                         <p class="card_icon" style="background-color: rgba(243, 165, 48, 0.13);">
                         <!-- <img alt="code" src="./images/code.svg" /> -->
@@ -358,7 +358,7 @@
                         <p class="card-text fontLatoRegular">Thought <br>Leadership</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body ambience">
+                <div class="Rectangle_card_body ambience" data-aos="zoom-in" data-aos-duration="3000">
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f7eff0;">
                         <img alt="code" class="in_active" src="./images/ambience_icon.png" />
@@ -367,7 +367,7 @@
                         <p class="card-text fontLatoRegular">Ambience</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body freedom">
+                <div class="Rectangle_card_body freedom" data-aos="fade-left" data-aos-duration="3000">
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f4f9f9;">
                             <img alt="code" class="in_active" src="./images/freedom_icon.png" />
@@ -394,24 +394,29 @@
             
             <div class="row">
                 <div class="col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 image_div">
-                    <img src="https://source.unsplash.com/random/469x405" />
+                    <!-- <img src="https://source.unsplash.com/random/469x405" /> -->
+                    <img src="./images/team_activity_2.png" />
                 </div>
                 <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7 image_div">
-                    <img src="https://source.unsplash.com/random/713x405" />
+                    <!-- <img src="https://source.unsplash.com/random/713x405" /> -->
+                    <img src="./images/team_activity_3.png" />
+                </div>
+                <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7 image_div">
+                    <!-- <img src="https://source.unsplash.com/random/713x405" /> -->
+                    <img src="./images/team_activity_1.png" />
                 </div>
                 <div class="col-5 col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 image_div">
-                    <img src="https://source.unsplash.com/random/469x324" />
+                    <!-- <img src="https://source.unsplash.com/random/469x324" /> -->
+                    <img src="./images/team_activity_4.png" />
                 </div>
-                <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7" style="padding: 0;display: flex;">
+                <!-- <div class="col-7 col-xs-7 col-sm-7 col-md-7 col-lg-7 col-xl-7" style="padding: 0;display: flex;">
                     <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 image_div">
                         <img src="https://source.unsplash.com/random/355x324" />
-                        <!-- <img src="https://source.unsplash.com/random/469x324" /> -->
                     </div>
                     <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 image_div">
                         <img src="https://source.unsplash.com/random/356x325" />
-                        <!-- <img src="https://source.unsplash.com/random/469x324" /> -->
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -433,7 +438,7 @@
                         <div class="card__body">
                             <!-- <i class="fa fa_icon fa-archive" aria-hidden="true"></i> -->
                             <span class="fa_icon Oval_code">
-                                <img alt="code" src="./images/code.svg" />
+                                <img alt="code" src="./images/face.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Express</p>
                             <p class="card-text fontLatoRegular">
@@ -446,7 +451,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_pro">
-                                <img alt="programming" src="./images/programming.svg" />
+                                <img alt="programming" src="./images/satar_shape.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold" >Impress</p>
                             <p class="card-text fontLatoRegular">
@@ -459,7 +464,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_flash">
-                                <img alt="shape" src="./images/shape.svg" />
+                                <img alt="shape" src="./images/flag.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Progress</p>
                             <p class="card-text fontLatoRegular">
@@ -797,7 +802,9 @@
 <script src="./plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
 <script type="text/javascript">
-    AOS.init();
+    AOS.init({
+      once: true
+    });
     // Hide Header on on scroll down
     var didScroll;
     var lastScrollTop = 0;
