--- a/opportunities.html
+++ b/opportunities.html
@@ -324,7 +324,7 @@
         </div>
         <div class="row_s">
             <div class="container">
-                <div class="Rectangle_card_body culture" data-aos="fade-right" data-aos-duration="3000">
+                <div class="Rectangle_card_body culture" >
                     <div class="cont">
                         <p class="card_icon" style="background-color: #eff8f6;">
                         <!-- <img alt="code" src="./images/code.svg" /> -->
@@ -335,7 +335,7 @@
                         <p class="card-text fontLatoRegular">Great <br>Culture</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body learning" data-aos="zoom-in" data-aos-duration="3000">
+                <div class="Rectangle_card_body learning" >
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f3f5ff;">
                         <img alt="code" class="in_active" src="./images/experimental_learning.png" />
@@ -344,7 +344,7 @@
                         <p class="card-text fontLatoRegular">Experimental <br/>Learning</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body leadership" data-aos="fade-down" data-aos-duration="3000">
+                <div class="Rectangle_card_body leadership" >
                     <div class="cont">
                         <p class="card_icon" style="background-color: rgba(243, 165, 48, 0.13);">
                         <!-- <img alt="code" src="./images/code.svg" /> -->
@@ -358,7 +358,7 @@
                         <p class="card-text fontLatoRegular">Thought <br>Leadership</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body ambience" data-aos="zoom-in" data-aos-duration="3000">
+                <div class="Rectangle_card_body ambience" >
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f7eff0;">
                         <img alt="code" class="in_active" src="./images/ambience_icon.png" />
@@ -367,7 +367,7 @@
                         <p class="card-text fontLatoRegular">Ambience</p>
                     </div>
                 </div>
-                <div class="Rectangle_card_body freedom" data-aos="fade-left" data-aos-duration="3000">
+                <div class="Rectangle_card_body freedom" >
                     <div class="cont">
                         <p class="card_icon" style="background-color: #f4f9f9;">
                             <img alt="code" class="in_active" src="./images/freedom_icon.png" />
