--- a/opportunities.html
+++ b/opportunities.html
@@ -88,7 +88,8 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 " >
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
-                        <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.png"/>&nbsp;</a>
+                        <a href="/" class="logo logo_white" alt="crayond" ><img alt="logo-crayond" src="./images/crayond_logo_light.png"/>&nbsp;</a>
+                        <a href="/" class="logo logo_black" style="display: none;" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.png"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
@@ -508,7 +509,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645051-front-end-developer')" >APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -520,7 +521,7 @@
                             <p class="fontLatoRegular" >Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645045-back-end-developer')" >APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -532,7 +533,7 @@
                             <p class="fontLatoRegular" >Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645053-full-stack-developer')">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -546,7 +547,7 @@
                             <p class="fontLatoRegular" >Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('mailto:crayond@life.com?subject=Job Application');">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -558,7 +559,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645087-ios-developer')">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -570,7 +571,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('mailto:crayond@life.com?subject=Job Application');">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -582,7 +583,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645049-content-writer')">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -594,7 +595,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645085-visual-designer')">APPLY NOW</button>
                         </div>
                     </div>
                 </div>
@@ -614,19 +615,14 @@
         <img alt="oval" src="./images/oval.png" class="ovel" />
         <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
-                <!-- <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button> -->
-                <!-- <p class="fontNova" style="color: #ffe953d6;font-size: 1.4rem;margin: 0;" >100+ ideas shipped as scalable products</p> -->
-                
-                <p class="fontGraphikSemiRegular" style="color: #ffe953d6;font-size: 1.4rem;margin: 0;" >100+ ideas shipped as scalable products</p>
-                <!-- <img src="./images/confetti (1).svg" alt="confetti" /> -->
-            </div>
             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
-                <!-- <h1 class="fontGraphikSemibold">100+ ideas shipped as scalable <br />products. Yours could be the next!</h1> -->
-                <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
+                <h1 class="fontGraphikSemibold">Interested? We're hiring.</h1>
+                <p style="color: #fff;">
+                    If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work <br>to change the world, you have a compelling reason to join us.
+                </p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
-                <button class="banner_button fontLatoBlack mail_us" onclick="window.location.href = './contact'">
+                <button class="banner_button fontLatoBlack mail_us" onclick="window.open('mailto:crayond@life.com?subject=Job Application');">
                     <span> MAIL US &nbsp<i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                 </button>
                 <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
@@ -838,11 +834,15 @@
             // Scroll Up
             if(st + $(window).height() < $(document).height()) {
                 $('.header').removeClass('nav-up').addClass('nav-down');
+                $(".logo_black").css("display", "unset");
+                $(".logo_white").css("display", "none");
                 $('.header').removeClass('transparent_header');
             }
         }
         if(st < 500){
             $('.header').removeClass('nav-down');
+            $(".logo_white").css("display", "unset");
+            $(".logo_black").css("display", "none");
             $('.header').addClass('transparent_header');
 
         }
