--- a/opportunities.html
+++ b/opportunities.html
@@ -501,7 +501,7 @@
                 </p>
             </div>
             <div class="data_row">
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -512,8 +512,13 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645051-front-end-developer')" >APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645051-front-end-developer')" > 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -524,8 +529,13 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645045-back-end-developer')" >APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645045-back-end-developer')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list" style="background-image: none;">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -536,10 +546,15 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645053-full-stack-developer')">APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645053-full-stack-developer')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
 
                 <div class="hiden_section_open_list">
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -547,11 +562,16 @@
                             <p class="fontLatoRegular" >Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack" onclick="window.open('mailto:crayond@life.com?subject=Job Application');">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.fcWidget.open();window.fcWidget.show();">Write to Us</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.fcWidget.open();window.fcWidget.show();">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -562,8 +582,13 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645087-ios-developer')">APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645087-ios-developer')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -571,11 +596,16 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack" onclick="window.open('mailto:crayond@life.com?subject=Job Application');">APPLY NOW</button>
+                            <button class="fontLatoBlack" onclick="window.fcWidget.open();window.fcWidget.show();">Write to Us</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.fcWidget.open();window.fcWidget.show();">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -586,8 +616,13 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645049-content-writer')">APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645049-content-writer')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
-                <div style="padding-left: 60px;position: relative;">
+                <div class="list_of_jobs">
                     <i class="fa fa-star" style="position: absolute;left: 20px;top: 20px;color: #dfa212;" aria-hidden="true"></i>
                     <div class="row list" style="background-image: none;">
                         <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
@@ -598,6 +633,11 @@
                             <button class="fontLatoBlack" onclick="window.open('https://angel.co/company/thecrayond/jobs/645085-visual-designer')">APPLY NOW</button>
                         </div>
                     </div>
+                    <span class="apply_arrow" style="display: none;" onclick="window.open('https://angel.co/company/thecrayond/jobs/645085-visual-designer')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
+                            <path fill="none" fill-rule="evenodd" stroke="#6455C2" stroke-width="2" d="M1 1l5 5-5 5"/>
+                        </svg>
+                    </span>
                 </div>
                 </div>
             </div>
@@ -797,6 +837,9 @@
 <!-- // Freshchat -->
 <script src="./plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
+
+<!-- <script>window.fcWidget.init({ token: "9252e806-e958-4627-945f-57407a9a7a1a", host: "https://wchat.freshchat.com"});window.fcWidget.hide();</script> -->
+
 <script type="text/javascript">
     AOS.init({
       once: true
